# Airfoil-OP2-FEM

./: CMakeLists.txt  README.md  naca0012.cgns  naca0012.geo  naca0012.vtk
advec/: grid.geo  grid.vtk
advec/src/: CMakeLists.txt  advec.cpp  advec_rhs.h  constantsDG.h  get_bedge_q.h  get_neighbour_q.h  load_mesh.cpp  neighbour_zero.h  save_solution.cpp  save_solution.h  set_ic.h  set_workingQ.h  update_Q.h
advec/src/constants/: constant_Ds.h  constant_LIFT.h  constant_r.h  constant_s.h  constant_util.h
advec/tools/: CMakeLists.txt  vtk2CGNS.cpp
src/: CMakeLists.txt  airfoil.cpp  airfoil.cu  airfoil_cuda_face_fluxes.cu  airfoil_cuda_init_grid.cu  airfoil_cuda_internal_fluxes.cu  airfoil_cuda_matrices.h  airfoil_data.cpp  airfoil_data.h  airfoil_op.cpp  airfoil_op.cu  backwards_euler_update_Q.h  calc_dt.h  calc_geometric_factors.h  calc_normals.h  calc_solution_pt_coords.h  constantsDG.h  euler_fluxes.h  euler_rhs.h  flux_zero.h  fluxes.h  get_bedge_q.h  get_neighbour_q.h  init_grid.h  internal_fluxes.h  load_mesh.cpp  load_mesh.h  neighbour_zero.h  save_solution.cpp  save_solution.h  set_ic.h  set_workingQ.h  update_Q.h
src/constants/: constant_Drw.h  constant_Dsw.h  constant_util.h
src/cuda/: airfoil_hybkernels.cu  airfoil_kernels.cu  backwards_euler_update_Q_kernel.cu  calc_dt_kernel.cu  euler_rhs_kernel.cu  flux_zero_kernel.cu  get_bedge_q_kernel.cu  get_neighbour_q_kernel.cu  init_grid_kernel.cu  internal_fluxes_kernel.cu  neighbour_zero_kernel.cu  set_ic_kernel.cu  set_workingQ_kernel.cu  update_Q_kernel.cu
src/openacc/: airfoil_acckernels.c  backwards_euler_update_Q_acckernel.c  calc_dt_acckernel.c  euler_rhs_acckernel.c  flux_zero_acckernel.c  get_bedge_q_acckernel.c  get_neighbour_q_acckernel.c  init_grid_acckernel.c  internal_fluxes_acckernel.c  neighbour_zero_acckernel.c  set_ic_acckernel.c  set_workingQ_acckernel.c  update_Q_acckernel.c
src/openmp/: airfoil_kernels.cpp  backwards_euler_update_Q_kernel.cpp  calc_dt_kernel.cpp  euler_rhs_kernel.cpp  flux_zero_kernel.cpp  get_bedge_q_kernel.cpp  get_neighbour_q_kernel.cpp  init_grid_kernel.cpp  internal_fluxes_kernel.cpp  neighbour_zero_kernel.cpp  set_ic_kernel.cpp  set_workingQ_kernel.cpp  update_Q_kernel.cpp
src/openmp4/: airfoil_omp4kernel_funcs.cpp  airfoil_omp4kernels.cpp  backwards_euler_update_Q_omp4kernel.cpp  backwards_euler_update_Q_omp4kernel_func.cpp  calc_dt_omp4kernel.cpp  calc_dt_omp4kernel_func.cpp  euler_rhs_omp4kernel.cpp  euler_rhs_omp4kernel_func.cpp  flux_zero_omp4kernel.cpp  flux_zero_omp4kernel_func.cpp  get_bedge_q_omp4kernel.cpp  get_bedge_q_omp4kernel_func.cpp  get_neighbour_q_omp4kernel.cpp  get_neighbour_q_omp4kernel_func.cpp  init_grid_omp4kernel.cpp  init_grid_omp4kernel_func.cpp  internal_fluxes_omp4kernel.cpp  internal_fluxes_omp4kernel_func.cpp  neighbour_zero_omp4kernel.cpp  neighbour_zero_omp4kernel_func.cpp  set_ic_omp4kernel.cpp  set_ic_omp4kernel_func.cpp  set_workingQ_omp4kernel.cpp  set_workingQ_omp4kernel_func.cpp  update_Q_omp4kernel.cpp  update_Q_omp4kernel_func.cpp
src/seq/: airfoil_seqkernels.cpp  backwards_euler_update_Q_seqkernel.cpp  calc_dt_seqkernel.cpp  euler_rhs_seqkernel.cpp  flux_zero_seqkernel.cpp  get_bedge_q_seqkernel.cpp  get_neighbour_q_seqkernel.cpp  init_grid_seqkernel.cpp  internal_fluxes_seqkernel.cpp  neighbour_zero_seqkernel.cpp  set_ic_seqkernel.cpp  set_workingQ_seqkernel.cpp  update_Q_seqkernel.cpp
src/vec/: airfoil_veckernels.cpp  backwards_euler_update_Q_veckernel.cpp  calc_dt_veckernel.cpp  euler_rhs_veckernel.cpp  flux_zero_veckernel.cpp  get_bedge_q_veckernel.cpp  get_neighbour_q_veckernel.cpp  init_grid_veckernel.cpp  internal_fluxes_veckernel.cpp  neighbour_zero_veckernel.cpp  set_ic_veckernel.cpp  set_workingQ_veckernel.cpp  update_Q_veckernel.cpp
tests/: Solution_Points_Check.ipynb
tools/: CMakeLists.txt  vtk2CGNS.cpp
vortex/: grid.geo  grid.vtk
vortex/src/: CMakeLists.txt  constantsDG.h  euler_rhs.h  filterQ.h  get_bedge_q.h  get_neighbour_q.h  init_grid.h  l2_error.h  load_mesh.cpp  load_mesh.h  save_solution.cpp  set_ic.h  set_workingQ.h  update_Q.h  vortex.cpp
vortex/src/constants/: constant_Dr.h  constant_LIFT.h
vortex/tools/: CMakeLists.txt  vtk2CGNS.cpp
